--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,22 @@
-version: "3.9"
-
+version: '3.8'
 services:
   backend:
-    container_name: academic_backend
     build: .
+    container_name: academic-manager-api
     ports:
       - "3000:3000"
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/academicdb
+    env_file:
+      - .env
     depends_on:
       - mongo
-    volumes:
-      - .:/app
-      - /app/node_modules
 
   mongo:
-    image: mongo:7
-    container_name: academic_mongo
-    restart: always
+    image: mongo:6
+    container_name: academic-mongo
     ports:
       - "27017:27017"
-    environment:
-      MONGO_INITDB_DATABASE: academicdb
     volumes:
       - mongo_data:/data/db
-
-  mongo-express:
-    image: mongo-express
-    container_name: academic_mongo_express
-    restart: always
-    ports:
-      - "8081:8081"
-    environment:
-      - ME_CONFIG_MONGODB_SERVER=mongo
-      - ME_CONFIG_MONGODB_PORT=27017
-      - ME_CONFIG_BASICAUTH_USERNAME=admin
-      - ME_CONFIG_BASICAUTH_PASSWORD=admin123
-    depends_on:
-      - mongo
 
 volumes:
   mongo_data:
